--- a/package.json
+++ b/package.json
@@ -9,21 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@uiw/codemirror-extensions-langs": "^4.21.18",
+    "@uiw/codemirror-themes": "^4.21.18",
+    "@uiw/codemirror-themes-all": "^4.21.18",
+    "@uiw/react-codemirror": "^4.21.18",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "codemirror": "^6.0.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "lucide-react": "^0.279.0",
     "next": "13.5.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
+    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
