--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
@@ -32,6 +33,7 @@
     "codemirror": "^6.0.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.279.0",
     "next": "13.5.2",
     "next-themes": "^0.2.1",
