--- a/package.json
+++ b/package.json
@@ -38,14 +38,17 @@
     "next": "13.5.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
-    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3"
   }
 }
