--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
+    "client-only": "^0.0.1",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "codemirror": "^6.0.1",
@@ -49,6 +50,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.14",
     "prettier": "^3.0.3"
   }
 }
